modified pom.xml file